--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.6.0",
+    "element-plus": "^2.2.5",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
