--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.12",
     "vite-plugin-pages": "^0.24.0",
+    "vite-plugin-vue-layouts": "^0.6.0",
     "vitest": "^0.14.2",
     "vue-tsc": "^0.37.7"
   },
